# xtask: build orchestration for ghost-hunter.
#
# Constraint notes:
#
#   No external dependencies. xtask/src/main.rs uses std only (std::fs,
#   std::path, std::process). Any external dep added here is a constraint
#   violation — it would bloat the build tool and risk version-resolution
#   interference with the workspace proper.
#
#   The [[bin]] section is mandatory. Without an explicit binary declaration,
#   the `cargo xtask` alias (defined in .cargo/config.toml as
#   `xtask = ["run", "--package", "xtask", "--"]`) could resolve ambiguously
#   if the package shape ever changes. Explicit declaration eliminates that
#   ambiguity permanently.
#
#   This crate must NOT appear as a path dependency in any other workspace
#   member. It is invoked exclusively via `cargo xtask` from the shell. Adding
#   it as a dep elsewhere would incorrectly pull its std-only orchestration
#   code into the workspace dependency graph and potentially break no_std
#   targets such as gh-probe.
#
#   edition = "2021" is mandatory for consistency across all workspace members.

[package]
name    = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]